<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/line">
    </item>
    <item android:id="@+id/article"
        android:title="@string/collection">
        <menu>
            <item
                android:id="@+id/favourite_article"
                android:icon="@drawable/ic_favorite_outline_24dp"
                android:title="@string/collected_articles" />
            <item
                android:id="@+id/favourite_website"
                android:icon="@drawable/ic_web_black_24dp"
                android:title="@string/collected_websites" />

            <item
                android:id="@+id/share_list"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/user_shares" />

            <item
                android:id="@+id/todo_list"
                android:icon="@drawable/ic_todo_24dp"
                android:title="@string/todo_list" />
        </menu>
    </item>

    <item android:id="@+id/us"
        android:title="@string/info_about">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_outline_24dp"
                android:title="@string/about_us" />

            <item
                android:id="@+id/helper"
                android:icon="@drawable/ic_data_usage_black_24dp"
                android:title="@string/statement" />

            <item
                android:id="@+id/go_star"
                android:icon="@drawable/ic_star_border_24dp"
                android:title="@string/star" />

            <item
                android:id="@+id/login_out"
                android:icon="@drawable/ic_exit_to_app_24dp"
                android:title="@string/login_out" />
        </menu>
    </item>


</menu>