<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="holder"
            type="android.shj.wankt.ui.dialog.RegisterDialogFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg_with_padding">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:onClick="@{holder::close}"
            android:src="@drawable/ic_close_grey_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/header"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close"
            bind:circleImg="@{@drawable/ic_header}"
            tools:src="@drawable/ic_header" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ellipsize="start"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:ignore="AutoFill,labelFor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ellipsize="start"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            tools:ignore="AutoFill,labelFor" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_bg"
            android:ellipsize="start"
            android:hint="@string/repass_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:singleLine="true"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="AutoFill,labelFor" />

        <Button
            android:id="@+id/register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:onClick="@{holder::register}"
            android:text="@string/register_text"
            app:layout_constraintTop_toBottomOf="@+id/repeat_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>